--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^4.3.0",
     "webpack-dev-server": "^3.10.3"
   }
 }
